[gd_scene load_steps=43 format=2]

[ext_resource path="res://Character/Grub/Grub.gd" type="Script" id=1]
[ext_resource path="res://Character/Grub/Texture/Grub_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Object/Component/HealtBar/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Object/Component/HitBox/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assate/Effect/explosition_#2.png" type="Texture" id=5]
[ext_resource path="res://Character/Grub/Texture/spawning_animation.png" type="Texture" id=6]
[ext_resource path="res://Assate/Effect/dignal_blured_squear.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 6.99996 )

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 16.2788

[sub_resource type="CanvasItemMaterial" id=5]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 4
particles_anim_loop = false

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.00961538, 1 )
colors = PoolColorArray( 1, 0, 0.0300751, 1, 1, 0.984375, 0, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.294057 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 2
emission_box_extents = Vector3( 8, 8, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.27
color_ramp = SubResource( 7 )
hue_variation_curve = SubResource( 9 )
anim_speed = 1.0

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.471154, 1 )
colors = PoolColorArray( 0.172549, 0.772549, 0.964706, 1, 0.172549, 0.772549, 0.964706, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 0 ), 0.0, 3.02638, 0, 0, Vector2( 0.172662, 0.981557 ), 2.28707, 2.28707, 0, 0, Vector2( 0.625899, 0.981557 ), -2.8626, -2.8626, 0, 0, Vector2( 0.978417, 0.022541 ), -2.32426, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
emission_shape = 2
emission_box_extents = Vector3( 8, 8, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.44
angular_velocity = -276.16
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 49.32
linear_accel_random = 0.18
damping = 47.13
scale = 0.1
scale_curve = SubResource( 14 )
color_ramp = SubResource( 12 )
hue_variation = 0.32
hue_variation_random = 0.11

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.0745098, 0.54902, 0.0352941, 1 )
border_color = Color( 0.145098, 0.0117647, 0.0117647, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.145098, 0.0117647, 0.0117647, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Animation" id=18]
tracks/0/type = "value"
tracks/0/path = NodePath("ExplostionPartical:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplositivArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "set_is_ready"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "self_distruction"
}, {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HealthBar:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TargetDetector/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SpawnPaetical:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=19]
tracks/0/type = "value"
tracks/0/path = NodePath("ExplositivArea/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "set_is_ready"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExplostionPartical:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpawningSpritsheet:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 11 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpawningSpritsheet:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HealthBar:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SpawnPaetical:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("TargetDetector/CollisionShape2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=20]
resource_name = "take_damage"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ExplositivArea/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2, 2 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_is_ready"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TargetDetector/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ExplostionPartical:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SpawnPaetical:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=21]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ExplositivArea/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 1 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_is_ready"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TargetDetector/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SpawnPaetical:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "explode"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "spawn"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "take_damage"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "wonder"

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=35]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=27]
states/explode/node = SubResource( 22 )
states/explode/position = Vector2( 302, 133 )
states/spawn/node = SubResource( 23 )
states/spawn/position = Vector2( 142, 58 )
states/take_damage/node = SubResource( 29 )
states/take_damage/position = Vector2( 302, 58 )
states/wonder/node = SubResource( 24 )
states/wonder/position = Vector2( 142, 133 )
transitions = [ "spawn", "wonder", SubResource( 25 ), "wonder", "explode", SubResource( 26 ), "take_damage", "explode", SubResource( 30 ), "spawn", "take_damage", SubResource( 31 ), "wonder", "take_damage", SubResource( 32 ), "explode", "take_damage", SubResource( 33 ), "take_damage", "spawn", SubResource( 34 ), "take_damage", "wonder", SubResource( 35 ) ]
start_node = "spawn"

[sub_resource type="AnimationNodeStateMachinePlayback" id=28]

[node name="Grub" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )
life = 7.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -4 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="HitBox" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, -6 )
rotation = 1.57079
shape = SubResource( 2 )

[node name="TargetDetector" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -4 )
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetDetector"]
shape = SubResource( 3 )

[node name="ExplositivArea" type="Area2D" parent="."]
position = Vector2( 0, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplositivArea"]
shape = SubResource( 4 )
disabled = true

[node name="TerrainDetector" type="Node2D" parent="."]
visible = false

[node name="WallDetector" type="RayCast2D" parent="TerrainDetector"]
position = Vector2( 0, -4 )
enabled = true
cast_to = Vector2( 8, 0 )

[node name="GroundDetector" type="RayCast2D" parent="TerrainDetector"]
position = Vector2( 8, -4 )
enabled = true
cast_to = Vector2( 0, 8 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )
offset = Vector2( 0, -8 )
hframes = 4
frame = 1

[node name="ExplostionPartical" type="Particles2D" parent="."]
material = SubResource( 5 )
position = Vector2( 0, -5 )
emitting = false
explosiveness = 1.0
process_material = SubResource( 10 )
texture = ExtResource( 5 )

[node name="SpawnPaetical" type="Particles2D" parent="."]
emitting = false
amount = 20
explosiveness = 1.0
local_coords = false
process_material = SubResource( 15 )
texture = ExtResource( 7 )

[node name="SpawningSpritsheet" type="Sprite" parent="."]
texture = ExtResource( 6 )
offset = Vector2( 0, -32 )
hframes = 4
vframes = 3

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = -4.0
margin_top = -12.0
margin_right = 11.0
margin_bottom = -7.0
rect_scale = Vector2( 0.462324, 0.407332 )
custom_styles/fg = SubResource( 16 )
custom_styles/bg = SubResource( 17 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 18 )
anims/spawn = SubResource( 19 )
anims/take_damage = SubResource( 20 )
anims/wonder = SubResource( 21 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 27 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 28 )

[connection signal="body_entered" from="TargetDetector" to="." method="_on_target_body_entered"]
